# python-nubia

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  Pipfile  README.md  build.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
example/: nubia_context.py  nubia_example.py  nubia_plugin.py  nubia_statusbar.py
example/commands/: sample_commands.py
example/commands/more/: moar_commands.py
nubia/: __init__.py
nubia/internal/: blackcmd.py  cmdbase.py  cmdloader.py  completion.py  constants.py  context.py  deprecation.py  exceptions.py  helpers.py  interactive.py  ipython.py  nubia.py  options.py  parser.py  plugin_interface.py  registry.py  registry_tools.py  usage_logger_interface.py
nubia/internal/commands/: builtin.py  help.py
nubia/internal/io/: eventbus.py  logger.py  session_logger.py
nubia/internal/typing/: __init__.py  argparse.py  builder.py  inspect.py
nubia/internal/ui/: ipython.py  lexer.py  statusbar.py  style.py
nubia_complete/: completer.py  main.py  shell.py
tests/: cmdloader_test.py  commands_test.py  helpers.py  helpers_test.py  inspection_test.py  read_stdin_test.py  supercommands_test.py  typing-py3-style.py  typing_test.py  util.py
tests/sample_package/: commands.py
tests/sample_package/subpackage/: more_commands.py
