# Copyright (c) Facebook, Inc. and its affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[tool.poetry]
name = "python-nubia"
version = "0.1.b4"
description = "A framework for building beautiful shells"
authors = [
    "Ahmed Soliman <asoli@fb.com>"
]
license = "BSD"

readme = "README.md"
homepage = "https://github.com/facebookincubator/python-nubia"
keywords = ["cli", "shell", "interactive", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "nubia"},
    { include = "nubia_complete" },
]

[tool.poetry.dependencies]
python = "~3.6"
prettytable = "^0.7"
prompt-toolkit = "^1"
pygments = "^2.3"
pyparsing = "^2.3"
python-Levenshtein = "^0.12"
termcolor = "^1.1"

[tool.poetry.dev-dependencies]
nose = "^1.3"
ipdb = "^0.11"

[tool.black]
line-length = 80
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12.10"]
build-backend = "poetry.masonry.api"