# Copyright (c) Facebook, Inc. and its affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "python-nubia"
version = "0.3.0"
description = "A framework for building beautiful shells."
authors = ["Ahmed Soliman <asoli@fb.com>", "Andreas Backx <andreasbackx@fb.com>"]
license = "BSD"
packages = [
  { include = "nubia" }
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
jellyfish = "^0.8.9"
prettytable = "^2.4.0"
prompt-toolkit = "^3.0.23"
Pygments = "^2.10.0"
pyparsing = "^2.4.7"
termcolor = "^1.1.0"
typing-inspect = "^0.7.1"
wcwidth = "^0.2.5"

[tool.poetry.dev-dependencies]
codecov = "^2.1.12"
nose = "^1.3.7"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
